refactor(test): switch asserts from AssertJ to JUnit at the integration test
JUnit is enough for this test

Signed-off-by: devAarno <devaarno@rambler.ru>